<resources>
    <string name="app_name">Clinical Trial Management System</string>
    <string name="button_import">Import</string>
    <string name="button_export">Export</string>
    <string name="button_reading">Reading</string>
    <string name="button_patient">Patient</string>
    <string name="button_clinic">Clinic</string>
    <string name="textView_file">File</string>
    <string name="textView_manage">Manage</string>
    <string name="textView_reading">Reading</string>
    <string name="button_create">Create</string>
    <string name="button_delete">Delete</string>
    <string name="textView_patient">Patient</string>
    <string name="textView_id">ID:</string>
    <string name="plainText_search_patient">Search patient</string>
    <string name="button_view_readings">View Readings</string>
    <string name="textView_clinic">Clinic</string>
    <string name="plainText_search_clinic">Search clinic</string>
    <string name="button_view_patients">View Patients</string>
    <string name="dialog_export_title">Export</string>
    <string name="dialog_import_title">Import</string>
    <string name="dialog_export_message">Enter the name of the JSON file into which all relevant readings will be saved. The file will be saved in Download folder.</string>
    <string name="dialog_import_message">Enter the name of the file to import.</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_export_plainText">Enter name of JSON file</string>
    <string name="dialog_import_plainText">Enter name of file</string>
    <string name="dialog_patient_title">Create a Patient</string>
    <string name="textView_status">Status:</string>
    <string name="plainText_enter_pID">Enter patient ID</string>
    <string name="dialog_clinic_name">Name:</string>
    <string name="plainText_clinic_name">Enter name of clinic</string>
    <string name="dialog_clinic_title">Create a Clinic</string>
    <string name="plainText_clinic">Enter clinic ID</string>
    <string name="dialog_reading_title">Create a Reading</string>
    <string name="textView_value">Value: </string>
    <string name="textView_type">Type: </string>
    <string name="textView_patientID">Patient ID: </string>
    <string name="textView_clinicID">Clinic ID: </string>
    <string name="plainText_readingID">Enter reading ID</string>
    <string name="plainText_readingValue">Enter reading value</string>
    <string name="plainText_readingType">Enter reading type</string>
    <string name="textView_date">Date: </string>
    <string name="button_setDate">Set Date</string>
    <string name="button_edit">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
