<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_fileIO"
        android:layout_width="352dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:background="@drawable/ic_layout_border"
        android:padding="0.5dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_import"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/button_import" />

        <Button
            android:id="@+id/button_export"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/button_export" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_view"
        android:layout_width="352dp"
        android:layout_height="290dp"
        android:background="@drawable/ic_layout_border"
        android:orientation="vertical"
        android:padding="0.5dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="119dp">

        <Button
            android:id="@+id/button_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_reading" />

        <Button
            android:id="@+id/button_patient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_patient" />

        <Button
            android:id="@+id/button_clinic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_clinic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_file"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView_manage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_manage"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="119dp" />
</android.support.constraint.ConstraintLayout>