<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateReadingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="318dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_id"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/textView_id"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_id"
                android:layout_width="275dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/plainText_clinic"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_type"
                android:layout_width="51dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/textView_type"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/plainText_readingType"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/textView_value"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/plainText_readingValue"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_patient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_patient"
                android:layout_width="219dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/textView_patientID"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_pID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_clinic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_clinic"
                android:layout_width="219dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/textView_clinicID"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_cID"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>