<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_id"
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textView_id"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/plainText_enter_pID"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_status"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_status"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textView_status"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>