<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ics372.metrostate.edu.proj3.PatientActivity">

    <LinearLayout
        android:id="@+id/layout_patient"
        android:layout_width="352dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/layout_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textView_patient"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="352dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_patient">

        <TextView
            android:id="@+id/textView_id"
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/textView_id"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/plainText_search_patient"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@id/textView_id"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/plainText_search_patient"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textView_id"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_search_black_24dp"
            android:onClick="searchPatient" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/layout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_search">

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="384dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_search">

            <TableRow
                android:id="@+id/table_row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="ID"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="Status"
                    android:textColor="#000" />

            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dip"
                android:background="#4286f4" />
        </TableLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="368dp"
        android:layout_height="42dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <Button
            android:id="@+id/button_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="createPatient"
            android:text="@string/button_create" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="editPatient"
            android:text="@string/button_edit" />

        <Button
            android:id="@+id/button_detail"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="viewReadings"
            android:text="@string/button_view_readings" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deletePatient"
            android:text="@string/button_delete" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
